--- a/angular.json
+++ b/angular.json
@@ -67,6 +67,9 @@
             },
             "development": {
               "browserTarget": "Pokemon_Trainer:build:development"
+            },
+            "staging": {
+              "browserTarget": "Pokemon_Trainer:build:staging"
             }
           },
           "defaultConfiguration": "development"
